--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-Header add Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Origin "*"
 Header add Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
 
 RewriteEngine on
